bin/testsuite/tests/compiler/src/errors/compiler5050.swg
#global testerror "Err0743"

#test
{
    var a: [2] s32

    switch a
    {
    }
}
